--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,11 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  width: 100%;
+}
+
+* {
+  max-width: 100%;
 }
 
 body {
@@ -20,6 +25,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #3B363C;
+  color: #FFFFFF;
 }
 
 a {
